crates/plotnik-tests/tests/02-parser/recovery_validation/capture_dotted.txt
Q = (identifier) @foo.bar
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:18
  |
1 | Q = (identifier) @foo.bar
  |                  ^^^^^^^^
  |
help: use `@foo_bar`
  |
1 - Q = (identifier) @foo.bar
1 + Q = (identifier) @foo_bar
  |
help: capture names become result field names
